' Generated by UML Generator
' Encoded: hLN1JkCm4BtdAtnCQIDnhX1YHK520bGjt5PxSErHTaJYYMod4dJvztKIEzW9XKFtKgLlPjwCtxmuLyPoRTkwoimBgePhNZDHSMD-MAjnrrgu4wIUy0tOUVO79J21MbIGPNqMkwuGb0Lso1Wh5DKx3Mlsv4fLsI62j0QA4OaQX41ICLYudwMdobEM5KivLcp6iEYgIx2FVM6-Y9YNPeHJMfUq9vI-yhflCQlqS3f0Mha9myoAFoBpWJyeB0rGLFuUj7tWg7fXbmUt9OlYdTKEohakJSZ-zJkGZMLRa2Xfs4YZIRR2aik_HsCljlx_PR-SGV1rMEAuYO4XdyPxdNcfeUGw4ENDceNdw5Y2LwAjk7ucowlkR9BQNTLrMDPahERw9vYsXbwsoVYUxPYb6YScKiJePmu3JUsJvf_kbMtFbvx9ZF2asroH8UyMrLINhvmG3hV14fsWWpIMrrozqWQCS8xWiI8DQT6jZExs2IvTRjlXH-Np7RvHSSMED7U9dxHsx-oqSTZ3SygJIjAf7T7DWfl0caR-YzItQ51u4mfdMRXH-oziDwH_AzkSQJ5UGI4oirOK-gJ-P8lv-uAAOZnymCuS5Yw7gGUBukzbL93AbWQlG4dtYVa7
' URL: http://www.plantuml.com/plantuml/uml/hLN1JkCm4BtdAtnCQIDnhX1YHK520bGjt5PxSErHTaJYYMod4dJvztKIEzW9XKFtKgLlPjwCtxmuLyPoRTkwoimBgePhNZDHSMD-MAjnrrgu4wIUy0tOUVO79J21MbIGPNqMkwuGb0Lso1Wh5DKx3Mlsv4fLsI62j0QA4OaQX41ICLYudwMdobEM5KivLcp6iEYgIx2FVM6-Y9YNPeHJMfUq9vI-yhflCQlqS3f0Mha9myoAFoBpWJyeB0rGLFuUj7tWg7fXbmUt9OlYdTKEohakJSZ-zJkGZMLRa2Xfs4YZIRR2aik_HsCljlx_PR-SGV1rMEAuYO4XdyPxdNcfeUGw4ENDceNdw5Y2LwAjk7ucowlkR9BQNTLrMDPahERw9vYsXbwsoVYUxPYb6YScKiJePmu3JUsJvf_kbMtFbvx9ZF2asroH8UyMrLINhvmG3hV14fsWWpIMrrozqWQCS8xWiI8DQT6jZExs2IvTRjlXH-Np7RvHSSMED7U9dxHsx-oqSTZ3SygJIjAf7T7DWfl0caR-YzItQ51u4mfdMRXH-oziDwH_AzkSQJ5UGI4oirOK-gJ-P8lv-uAAOZnymCuS5Yw7gGUBukzbL93AbWQlG4dtYVa7
' Generated on: 2025-11-30T14:01:50.235956700

@startuml
skinparam classAttributeIconSize 0
hide circle

class Cliente {
  -nombre: String
  -correo: String
  -direccion: String
  --
  +Cliente(nombre: String, correo: String, direccion: String)
  +getNombre(): String
  +setNombre(nombre: String): void
  +getCorreo(): String
  +setCorreo(correo: String): void
  +getDireccion(): String
  +setDireccion(direccion: String): void
  +toString(): String
}

class Main {
  +{static} main(args: String[]): void
}

class Pedido {
  -productos: List<Producto>
  -cliente: Cliente
  --
  +Pedido(cliente: Cliente)
  +agregarProducto(p: Producto): void
  +calcularTotal(): double
  +mostrarResumen(): void
}

class Producto {
  -nombre: String
  -precio: double
  --
  +Producto(nombre: String, precio: double)
  +getNombre(): String
  +setNombre(nombre: String): void
  +getPrecio(): double
  +setPrecio(precio: double): void
  +calcularPrecioFinal(): double
  +toString(): String
}

class ProductoDigital {
  -tamanyoDescarga: double
  -porcientoIva: double
  -descuento: double
  --
  +ProductoDigital(nombre: String, precio: double, tamanyoDescarga: double, porcientoIva: double, descuento: double)
  +getTamanyoDescarga(): double
  +getPorcientoIva(): double
  +getDescuento(): double
  +calcularPrecioFinal(): double
  +toString(): String
}

class ProductoFisico {
  -costeEnvio: double
  --
  +ProductoFisico(nombre: String, precio: double, costeEnvio: double)
  +getCosteEnvio(): double
  +setCosteEnvio(costeEnvio: double): void
  +calcularPrecioFinal(): double
  +toString(): String
}

Pedido o-- Producto
Pedido *-- Cliente
ProductoDigital --|> Producto
ProductoFisico --|> Producto
@enduml